updated icons in header

--- a/ecc2021.html
+++ b/ecc2021.html
@@ -16,19 +16,20 @@
 	<!-- Header -->
 	<section id="header">
 		<header>
-			<h1 style="display:inline;" id="logo"><a href="./index.html">Derek Onken</a> </h1> PhD &nbsp;
+			<h1 style="display:inline;" id="logo"><a href="./index.html">Derek Onken</a> </h1> PhD &nbsp &nbsp;
 				<ul class="icons"  style="display:inline;" >
-					<li><a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin" style="font-size: 1.1em;" target="_blank" aria-label="link to Linkedin profile"><span class="label">LinkedIn</span></a></li>
-                    <li><a href="https://scholar.google.com/citations?user=VqH6AJ8AAAAJ&hl=en" class="ai ai-google-scholar" style="font-size: 1.1em;" target="_blank" aria-label="link to Google Scholar profile"></a></li>
-					<li><a href="https://github.com/donken" class="icon brands fa-github" style="font-size: 1.1em;" target="_blank" aria-label="link to Github profile"><span class="label">Github</span></a></li>
+					<li> <h1> <a href="https://github.com/donken" class="icon brands fa-github" style="font-size: 1.3em; position: relative; bottom: -1px;" target="_blank" aria-label="link to Github profile"><span class="label">Github</span></a></h1></li>
+                    <li> <h1> <a href="https://scholar.google.com/citations?user=VqH6AJ8AAAAJ&hl=en" class="ai ai-google-scholar" style="font-size: 1.3em; position: relative; bottom: -2px;" target="_blank" aria-label="link to Google Scholar profile"></a></h1></li>
+                     <li> <h1> <a href="https://orcid.org/0000-0002-4640-767X" class="ai ai-orcid" style="font-size: 1.3em; position: relative; bottom: -1px;" target="_blank" aria-label="link to ORCID profile"><span class="label"></span></a> </h1> </li>
+                    <li> <h1> <a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin-square" style="font-size: 1.3em; position: relative; bottom: -1px;" target="_blank" aria-label="link to Linkedin profile"><span class="label"></span></a> </h1> </li>	
 				</ul>
 		</header>
 		<nav id="nav">
 			<ul>
-<!--				<li><a href="#one" class="active">About</a></li>-->
-				<li><a href="./index.html#two">Research</a></li>
+				<!--<li><a href="#one" class="active">About</a></li>-->
+				<li><a href="#two">Research</a></li>
 				<!--<li><a href="#three">Teaching</a></li>-->
-				<li><a href="./index.html#four">Contact</a></li>
+				<!-- <li><a href="#four">Contact</a></li> -->
 				<li><a href="./OnkenCV.pdf" target="_blank">CV</a></li>
 				<li><a href="./fun.html">Fun Links</a></li>
 			</ul>
