--- a/index.html
+++ b/index.html
@@ -24,19 +24,20 @@
 	<!-- Header -->
 	<section id="header">
 		<header>
-			<h1 style="display:inline;" id="logo"><a href="#">Derek Onken</a> </h1> PhD &nbsp;
+			<h1 style="display:inline;" id="logo"><a href="#">Derek Onken</a> </h1> PhD &nbsp &nbsp;
 				<ul class="icons"  style="display:inline;" >
-					<li><a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin" style="font-size: 1.1em;" target="_blank" aria-label="link to Linkedin profile"><span class="label">LinkedIn</span></a></li>
-                    <li><a href="https://scholar.google.com/citations?user=VqH6AJ8AAAAJ&hl=en" class="ai ai-google-scholar" style="font-size: 1.1em;" target="_blank" aria-label="link to Google Scholar profile"></a></li>
-					<li><a href="https://github.com/donken" class="icon brands fa-github" style="font-size: 1.1em;" target="_blank" aria-label="link to Github profile"><span class="label">Github</span></a></li>
+					<li> <h1> <a href="https://github.com/donken" class="icon brands fa-github" style="font-size: 1.3em; position: relative; bottom: -1px;" target="_blank" aria-label="link to Github profile"><span class="label">Github</span></a></h1></li>
+                    <li> <h1> <a href="https://scholar.google.com/citations?user=VqH6AJ8AAAAJ&hl=en" class="ai ai-google-scholar" style="font-size: 1.3em; position: relative; bottom: -2px;" target="_blank" aria-label="link to Google Scholar profile"></a></h1></li>
+                     <li> <h1> <a href="https://orcid.org/0000-0002-4640-767X" class="ai ai-orcid" style="font-size: 1.3em; position: relative; bottom: -1px;" target="_blank" aria-label="link to ORCID profile"><span class="label"></span></a> </h1> </li>
+                    <li> <h1> <a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin-square" style="font-size: 1.3em; position: relative; bottom: -1px;" target="_blank" aria-label="link to Linkedin profile"><span class="label"></span></a> </h1> </li>	
 				</ul>
 		</header>
 		<nav id="nav">
 			<ul>
-<!--				<li><a href="#one" class="active">About</a></li>-->
+				<!--<li><a href="#one" class="active">About</a></li>-->
 				<li><a href="#two">Research</a></li>
 				<!--<li><a href="#three">Teaching</a></li>-->
-				<li><a href="#four">Contact</a></li>
+				<!-- <li><a href="#four">Contact</a></li> -->
 				<li><a href="./OnkenCV.pdf" target="_blank">CV</a></li>
 				<li><a href="./fun.html">Fun Links</a></li>
 			</ul>
@@ -136,6 +137,10 @@
 
 						<b>
 						<h3> Publications/Preprints</h3>
+						I Morales-Ivorra, D Taverner, O Codina, S Castell, P Fischer, D Onken, P Martínez-Osuna, C Battioui, M Marín-López
+						External Validation of the Machine Learning-Based Thermographic Indices for Rheumatoid Arthritis: A Prospective Longitudinal Study. Diagnostics 2024.</br>
+						<a href="https://arxiv.org/abs/2104.03270" target="_blank">paper</a> 
+						</br>
 						D Onken, L Nurbekyan, X Li, S Wu Fung, S Osher, L Ruthotto.
 						A Neural Network Approach for High-Dimensional Optimal Control Applied to Multi-Agent Path Finding. IEEE TCST 2022.</br> 
 						 <a href="https://arxiv.org/abs/2104.03270" target="_blank">paper</a> &nbsp;
@@ -220,23 +225,7 @@
 			<section id="three">
 				<div class="container">
 				<h3> &nbsp; </h3>
-					<h3>Work Experience</h3>
-					<p> 2021 - Present </p>
-					<p style="padding-left: 20px"> <b>Research Scientist for Eli Lilly </b> </p> 
-					<p>   Summer 2020:  </p>
-					<p style="padding-left: 20px"> <b>Graduate Data Science Intern for United Health Group </b> </p> 
-					<p> Summer 2019:  </p> 
-					<p style="padding-left: 20px"> <b>Graduate Data Science Intern for United Health Group </b> </p>  
-					<p> Summer 2018: </p>
-					<p style="padding-left: 20px"> <b>High Performance Computing Intern for Air Force Research Labs </b> </p>
-					<p> Spring 2018: </p>
-					<p style="padding-left: 20px"> <b>TA for Dr. Li Xiong's Data Mining (CS378) </b> </p>
-					<p> Fall 2017: </p>
-					<p style="padding-left: 20px"> <b>Lab Instructor for Dr. Lars Ruthotto's Numerical Analysis (MATH315) </b> </p>
-					<p> Spring 2017: </p>
-					<p style="padding-left: 20px"> <b>TA for Dr. Michele Benzi's Numerical Analysis (MATH315) </b> </p>
-					<p>Fall 2016:</p>
-					<p style="padding-left: 20px"> <b>TA for Dr. Davide Fossati's Intro to Java (CS170) </b> </p>
+
 
 
                     <video width="80%" style="max-width:640px;" controls controlsList="nodownload" poster="./images/optum_video_poster.avif">
