updated link to rheumatology paper

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 						<h3> Publications/Preprints</h3>
 						I Morales-Ivorra, D Taverner, O Codina, S Castell, P Fischer, D Onken, P Martínez-Osuna, C Battioui, M Marín-López
 						External Validation of the Machine Learning-Based Thermographic Indices for Rheumatoid Arthritis: A Prospective Longitudinal Study. Diagnostics 2024.</br>
-						<a href="https://arxiv.org/abs/2104.03270" target="_blank">paper</a> 
+						<a href="https://doi.org/10.3390/diagnostics14131394" target="_blank">paper</a> 
 						</br>
 						D Onken, L Nurbekyan, X Li, S Wu Fung, S Osher, L Ruthotto.
 						A Neural Network Approach for High-Dimensional Optimal Control Applied to Multi-Agent Path Finding. IEEE TCST 2022.</br> 
