--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
       					<img align="right" src="images/gallery/OnkenProfile.png" alt="OnkenProfile" width=30% style="max-width:250px; margin:10px" >
     				</picture>
 
+
+
 					<h2>About</h2>
 
 
@@ -68,6 +70,9 @@
 					</br>
                     <p>(Such approaches include the following buzzwords: deep learning, neural networks, big data, statistical analysis, GPUs, numerical optimization, continuous normalizing flows, optimal control)</p>
 					<!--My strengths lie in mathematical approaches to data analysis which tends to encompass statistical analysis and machine learning methodologies.-->
+
+
+
 
 				</div>
 			</section>
@@ -134,6 +139,15 @@
 						</li>
 					</ul>
 
+
+<!-- 					<img align="left" src="https://ghchart.rshah.org/30A14E/donken" alt="Github chart" width=60% style="max-width:950px; margin:10px">
+					<img align="left" src="https://ghchart.rshah.org/30A14E/donken-lilly" alt="Github chart" width=60% style="max-width:950px; margin:10px">
+					EBEDF0 , 9BE9A8 , 40C463 , 30A14E , 216E39
+					</br>
+					</br>
+					</br>
+					</br>
+					</br> -->
 
 						<b>
 						<h3> Publications/Preprints</h3>
@@ -207,9 +221,7 @@
                         <br>
                         <h4> Other </h4>
                         <p style="padding-left: 20px">  The Capture of Fingernail and Scalp Psoriasis Pictures Through a Mobile Application in a Real-World Ixekizumab Observation Study at Maui Derm, Jan 2024, 
-                        	<!-- <a href="./2024MauiDermPoster.pdf" target="_blank">poster</a> </p> -->
-                        	<!-- https://assets.ctfassets.net/mpejy6umgthp/72f2j6BJyJOJQv3EjNcmcX/8ade0af27b9eaca562bc6f9a5296bd4e/Shannon_Maui_Derm_2024.pdf -->
-                        	<a href="https://lillyscience.lilly.com/download/4MqLqTTV0ET3BVrXtFsB9I" target="_blank">poster</a> </p>
+                        	<a href="./2024MauiDermPoster.pdf" target="_blank">poster</a> </p>
 		                <p style="padding-left: 20px">  Deep Learning in Medical Applications Workshop at Institute for Pure and Applied Mathematics (IPAM), Jan 2020, <a href="./2020LungCancerPoster.pdf" target="_blank">poster</a> </p>
 		                <p style="padding-left: 40px"> <font size="-1"> Thanks to the IPAM organizers for the opportunity.  </font> </p>
 	                    <p style="padding-left: 20px"> Emory Scientific Computing Seminar, Apr 2019, <a href="./OnkenPresentation.pdf" target="_blank">slides</a> </p>
