removed inactive links

--- a/fun.html
+++ b/fun.html
@@ -114,12 +114,12 @@
 					</br>
 					</br> People doing cool stuff:
 					</br> <a href="http://physicsgirl.com/" target="_blank">Physics</a>
-					</br> <a href="http://physics.uwyo.edu/~turner/" target="_blank">Astrophysics</a>
+					<!-- </br> <a href="http://physics.uwyo.edu/~turner/" target="_blank">Astrophysics</a> -->
 					</br> <a href="https://indico.cern.ch/event/388511/contributions/2612730/" target="_blank"> Scintillators </a>
-                    </br> <a href="https://fredhohman.com/" target="_blank"> Visualizing Neural Networks</a>
-                    </br> <a href="https://elybrand.github.io//" target="_blank"> Quantizing Neural Networks</a>
-                    </br> <a href="https://0xreza.com/" target="_blank"> Optimizing Distributed Systems</a>
-                    </br> <a href="https://lifewithlarissa.com/" target="_blank"> Traveling the Globe</a>
+          </br> <a href="https://fredhohman.com/" target="_blank"> Visualizing Neural Networks</a>
+          </br> <a href="https://elybrand.github.io//" target="_blank"> Quantizing Neural Networks</a>
+          <!-- </br> <a href="https://0xreza.com/" target="_blank"> Optimizing Distributed Systems</a> -->
+          </br> <a href="https://lifewithlarissa.com/" target="_blank"> Traveling the Globe</a>
 					
 
 					</br>
@@ -131,12 +131,12 @@
 					</br> <a href="http://www.stampsfoundation.org/project/decker-onken-georgia-tech/" target="_blank">Decker Onken</a>
 					</br> <a href="https://www.redandblack.com/sports/bulldogs-in-brazil-former-and-current-uga-athletes-competing-at/article_0fc47716-5dae-11e6-8298-fbb2fa9cb77f.html" target="_blank"> My teammates</a> 
 						
-                    </br>
-                    </br>
-                    </br> Life advice from others:
-                    <!-- </br> <a href="https://an.athletenetwork.com/blog/8-hard-lessons-i-learned-as-a-rower">Lessons from sport and STEM</a> -->
-                    </br> <a href="./8LessonsFromRowingSTEM.htm" target="_blank">Lessons from sport and STEM</a>
-                    </br> <a href="https://www.linkedin.com/pulse/why-hire-swimmer-who-swam-all-four-years-college-ben-fisher/" target="_blank">Why hire a swimmer</a>
+          </br>
+          </br>
+          </br> Life advice from others:
+          <!-- </br> <a href="https://an.athletenetwork.com/blog/8-hard-lessons-i-learned-as-a-rower">Lessons from sport and STEM</a> -->
+          </br> <a href="./8LessonsFromRowingSTEM.htm" target="_blank">Lessons from sport and STEM</a>
+          </br> <a href="https://www.linkedin.com/pulse/why-hire-swimmer-who-swam-all-four-years-college-ben-fisher/" target="_blank">Why hire a swimmer</a>
 
 				</div>
 			</section>
