--- a/aaaivideo.html
+++ b/aaaivideo.html
@@ -27,7 +27,7 @@
 		<nav id="nav">
 			<ul>
 				<!--<li><a href="#one" class="active">About</a></li>-->
-				<li><a href="#two">Research</a></li>
+				<li><a href="./index.html#two">Research</a></li>
 				<!--<li><a href="#three">Teaching</a></li>-->
 				<!-- <li><a href="#four">Contact</a></li> -->
 				<li><a href="./OnkenCV.pdf" target="_blank">CV</a></li>
