link to friend's website

--- a/fun.html
+++ b/fun.html
@@ -123,6 +123,7 @@
           </br> <a href="https://elybrand.github.io//" target="_blank"> Quantizing Neural Networks</a>
           <!-- </br> <a href="https://0xreza.com/" target="_blank"> Optimizing Distributed Systems</a> -->
           </br> <a href="https://lifewithlarissa.com/" target="_blank"> Traveling the Globe</a>
+        </br> <a href="https://unimportantbird.com/" target="_blank"> Freelancing</a>
 					
 
 					</br>
