--- a/ecc2021.html
+++ b/ecc2021.html
@@ -51,7 +51,7 @@
 
                     <iframe width="720" height="405" src="https://www.youtube.com/embed/YZRg6h_PgIM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div style="width:80%; text-align:center; max-width:640px;" >  <b> European Control Conference, June 2021</b></div>
-					</br> Accompanying Slides <a href="./2021ECCslides.pdf" target="_blank">link</a>
+					</br> Accompanying Slides <a href="./references/2021ECCslides.pdf" target="_blank">link</a>
 					</br> Proceedings <a href="https://doi.org/10.23919/ECC54610.2021.9655103" target="_blank">link</a>
                     </br>
                     </br> We extend thanks to Reza Karimi for the audio-visual quality
