--- a/index.html
+++ b/index.html
@@ -77,6 +77,104 @@
 
 
 
+
+<!--     <div id="data-container">Loading data...</div>
+
+    <canvas id="contributions-canvas" width="800" height="200"></canvas>
+
+    <script type="module">
+    	import { drawContributions } from "./github-contributions-canvas/src/index.js";
+
+        // Async function to fetch and display data
+        async function fetchData() {
+            try {
+                // const response = await fetch('https://jsonplaceholder.typicode.com/posts/1');
+                const response = await fetch('https://github-contributions-api.deno.dev/donken-lilly.json');
+                const data = await response.json();
+
+                // Display the data on the webpage
+                const container = document.getElementById('data-container');
+                // container.innerHTML = `<h2>${data.totalContributions}</h2><p>${data}</p>`;
+
+	            const contributions = data.contributions;
+
+	            let outputHtml = '<ul>';
+	            contributions.forEach(group => {
+	                group.forEach(contribution => {
+	                    outputHtml += `
+	                        <li>
+	                            Date: ${contribution.date}, 
+	                            Contributions: ${contribution.contributionCount}, 
+	                            Level: ${contribution.contributionLevel}, 
+	                            Color: ${contribution.color}
+	                        </li>`;
+	                });
+	            });
+	            outputHtml += '</ul>';
+
+	            container.innerHTML = outputHtml;
+
+
+                // Prepare data for drawing contributions
+                const formattedData = {
+                    years: [
+                        {
+                            year: "2024",
+                            total: data.totalContributions,
+                            range: {
+                                start: "2024-01-01",
+                                end: "2024-12-31"
+                            }
+                        }
+                    ],
+                    contributions: contributions.flat().map(contribution => ({
+                        date: contribution.date,
+                        count: contribution.contributionCount,
+                        color: contribution.color,
+                        intensity: contribution.level || 0
+                    }))
+                };
+
+	            // Get the canvas element and draw contributions
+                const canvas = document.getElementById('contributions-canvas');
+                drawContributions(canvas, {
+                    data: formattedData,
+                    username: "donken",
+                    themeName: "standard"
+                });
+
+
+            } catch (error) {
+                console.error('Error fetching data:', error);
+                document.getElementById('data-container').innerText = 'Failed to load data';
+            }
+        }
+
+
+        // Call the async function
+        fetchData();
+    </script> -->
+
+
+<!-- 
+			<script>
+			  async function getContributions(username) {
+			  var data = await (await fetch(`https://corsanywhere.herokuapp.com/https://github-contributions-api.deno.dev/${username}.json`)).json();
+			  console.log(data.totalContributions)
+			  }
+			  getContributions("donken") // Returns 0, as Octocat has zero contributions
+
+			  // async function displayData() {
+			  //   const data = await fetchData();
+			  //   document.getElementById('data-container').textContent = JSON.stringify(data);
+			  // }
+
+			  // // Call the async function
+			  // displayData();
+			</script> -->
+
+
+
 				</div>
 			</section>
 
@@ -200,7 +298,7 @@
                        	<p style="padding-left: 40px"> <font size="-1">Thanks to Wuchen Li for the invitation. </font> </p>
                        	<p style="padding-left: 20px"> UCLA Applied Mathematics Seminar, Mar 2021, talk </p>
                        	<p style="padding-left: 40px"> <font size="-1">Thanks to Levon Nurbekyan for the invitation. </font> </p>
-                       	<p style="padding-left: 20px"> Virtual Informal Systems Seminar (VISS) at Centre for Intelligent Machines (CIM) at McGill and the Groupe d'études et de Recherche en Analyse des Décisions (GERAD), Feb 2021, <a href="https://www.youtube.com/watch?v=ueatPJkzqmE&ab_channel=GERADRecherche" target="_blank">talk</a>  &nbsp; <a href="./VISS2021.pdf" target="_blank">slides</a> &nbsp; <a href="https://www.gerad.ca/en/events/1863" target="_blank">abstract</a> </p>
+                       	<p style="padding-left: 20px"> Virtual Informal Systems Seminar (VISS) at Centre for Intelligent Machines (CIM) at McGill and the Groupe d'études et de Recherche en Analyse des Décisions (GERAD), Feb 2021, <a href="https://www.youtube.com/watch?v=ueatPJkzqmE&ab_channel=GERADRecherche" target="_blank">talk</a>  &nbsp; <a href="./references/VISS2021.pdf" target="_blank">slides</a> &nbsp; <a href="https://www.gerad.ca/en/events/1863" target="_blank">abstract</a> </p>
                        	<p style="padding-left: 40px"> <font size="-1">Thanks to Peter E. Caines, Aditya Mahajan, Shuang Gao, Rinel Foguen Tchuendom, and Yaroslav Salii for the invitation. </font> </p>
                        	
                        	<br>
@@ -210,7 +308,7 @@
 
                        	<br>
                        	<h4> OT-Flow: Fast and Accurate Continuous Normalizing Flows via Optimal Transport @ </h4>
-                       	<p style="padding-left: 20px"> AAAI Conference on Artificial Intelligence, Feb 2021, <a href="./aaaivideo.html" target="_blank">talk</a> &nbsp; <a href="./2021AAAIslides.pdf" target="_blank">slides</a> &nbsp; <a href="./2021AAAIPoster.pdf" target="_blank">poster</a> </p>
+                       	<p style="padding-left: 20px"> AAAI Conference on Artificial Intelligence, Feb 2021, <a href="./aaaivideo.html" target="_blank">talk</a> &nbsp; <a href="./references/2021AAAIslides.pdf" target="_blank">slides</a> &nbsp; <a href="./references/2021AAAIPoster.pdf" target="_blank">poster</a> </p>
                        	<p style="padding-left: 40px"> <font size="-1"> Thanks to the AAAI organizers for the opportunity. </font> </p>
                        	<p style="padding-left: 20px"> Georgia Scientific Computing Symposium, Feb 2021, poster </p>
                        	<p style="padding-left: 40px"><font size="-1"> Thanks to the organizers at UGA for the opportunity. </font> </p>
@@ -219,19 +317,19 @@
 
                         <br>
                         <h4> Discretize-Optimize Methods for Neural ODEs in Continuous Normalizing Flows @ </h4>
-                        <p style="padding-left: 20px"> SIAM Mathematics of Data Science, Jun 2020, <a href="./2020SIAMMDSslides.pdf" target="_blank">slides</a> </p>
+                        <p style="padding-left: 20px"> SIAM Mathematics of Data Science, Jun 2020, <a href="./references/2020SIAMMDSslides.pdf" target="_blank">slides</a> </p>
                         <p style="padding-left: 40px"> <font size="-1"> Thanks to Harbir Antil, Thomas Brown, and Ratna Khatri for the invitation.  </font> </p>
 
 
                         <br>
                         <h4> Other </h4>
                         <p style="padding-left: 20px">  The Capture of Fingernail and Scalp Psoriasis Pictures Through a Mobile Application in a Real-World Ixekizumab Observation Study at Maui Derm, Jan 2024, 
-                        	<a href="./2024MauiDermPoster.pdf" target="_blank">poster</a> </p>
-		                <p style="padding-left: 20px">  Deep Learning in Medical Applications Workshop at Institute for Pure and Applied Mathematics (IPAM), Jan 2020, <a href="./2020LungCancerPoster.pdf" target="_blank">poster</a> </p>
+                        	<a href="./references/2024MauiDermPoster.pdf" target="_blank">poster</a> </p>
+		                <p style="padding-left: 20px">  Deep Learning in Medical Applications Workshop at Institute for Pure and Applied Mathematics (IPAM), Jan 2020, <a href="./references/2020LungCancerPoster.pdf" target="_blank">poster</a> </p>
 		                <p style="padding-left: 40px"> <font size="-1"> Thanks to the IPAM organizers for the opportunity.  </font> </p>
-	                    <p style="padding-left: 20px"> Emory Scientific Computing Seminar, Apr 2019, <a href="./OnkenPresentation.pdf" target="_blank">slides</a> </p>
-		                <p style="padding-left: 20px"> Georgia Scientific Computing Symposium, Feb 2019, <a href="./2019HORKNetPoster.pdf" target="_blank">poster</a> </p>
-		                <p style="padding-left: 20px"> Amazon Graduate Research Symposium, Oct 2017, <a href="./2017AmazonPoster.pdf" target="_blank">poster</a>
+	                    <p style="padding-left: 20px"> Emory Scientific Computing Seminar, Apr 2019, <a href="./references/2019PDEslides.pdf" target="_blank">slides</a> </p>
+		                <p style="padding-left: 20px"> Georgia Scientific Computing Symposium, Feb 2019, <a href="./references/2019HORKNetPoster.pdf" target="_blank">poster</a> </p>
+		                <p style="padding-left: 20px"> Amazon Graduate Research Symposium, Oct 2017, <a href="./references/2017AmazonPoster.pdf" target="_blank">poster</a>
 		                </b> </p>
 
 
