--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!DOCTYPE HTML
+<!DOCTYPE HTML>
 <html lang="en">
-
-<meta name="description" content="Research information about scientist Dr. Derek Onken">
 
 <head>
 	<title>Derek Onken - PhD</title>
 	<meta charset="utf-8" />
+	<meta name="description" content="Research information about scientist Dr. Derek Onken">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!-- <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css"> -->
 	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -16,9 +15,49 @@
 
 	<link rel="icon" href="images/DinO.ico"> <!-- browser tab icon -->
 
+	<style>
+		/* Styles for the combined contributions calendar */
+		#contrib-section {
+			margin-top: 2em;
+			padding: 1em;
+/*			background: #fafafa;*/
+/*			border-radius: 6px;*/
+/*			border: 1px solid #eee;*/
+		}
+		/* Shared container */
+		#profile-calendar-container {
+		  width: 250px;          /* fixed width for both */
+		  margin: 10px;          /* spacing around */
+		}
+
+		/* Profile image styling */
+		.profile-img {
+		  display: block;
+		  width: 100%;           /* take full container width */
+		  max-width: 250px;      /* cap width */
+		  margin-bottom: 0.2em;    /* space below image */
+		}
+
+		/* Calendar styling */
+		#combined-calendar {
+		  overflow-x: auto;       /* horizontal scroll if needed */
+		  padding: 0.1em 0;
+		  width: 100%;            /* match container width */
+		}
+		.calendar-img {
+		  display: block;
+		  width: 300%;            /* scale to container */*/
+/*		  height: auto;*/
+		}
+		.flex {
+		  display: flex;
+		  align-items: flex-start; /* same top height */
+		  gap: 1rem;
+		}
+
+		.text { flex: 1; }
+	</style>
 </head>
-
-
 
 <body>
 	<!-- Header -->
@@ -57,145 +96,50 @@
 			<section id="one">
 				<div class="container">
 
-<!-- 					<img align="right" src="images/gallery/OnkenProfile.png" alt="OnkenProfile" width=30% style="max-width:250px; margin:10px" > -->
-					<picture>
-      					<source type="image/avif" srcset="images/gallery/OnkenProfile.avif" />
-      					<img align="right" src="images/gallery/OnkenProfile.png" alt="OnkenProfile" width=30% style="max-width:250px; margin:10px" >
-    				</picture>
+
+					<section class="flex">
+					  	<div class="text">
+
+					  	<h2>About</h2>
+						<p>I'm Derek Onken, a data scientist and machine learning researcher. I focus on data-intensive problems predominantly in the overlap of mathematics and computer science. Ultimately, I enjoy applying the theory to develop solutions for practical problems.</p>
+
+						</br>
+	                    <p>(Such approaches include the following buzzwords: deep learning, neural networks, big data, statistical analysis, GPUs, numerical optimization, continuous normalizing flows, optimal control)</p>					    
+
+						<h2> &nbsp; </h2>
+
+						<h2>Education</h2>
+						<ul style="list-style:none;">
+							<li style="margin-bottom: 20px;">
+								<p><b>Doctor of Philosophy - Emory University</b> <br/> Computer Science & Informatics track </p>
+							</li>
+							<li style="margin-bottom: 20px;">
+								<p><b>Master of Science - Emory University</b> <br/> Computer Science </p>
+							</li>
+							<li style="margin-bottom: 20px;">
+								<p><b>Bachelor of Science - University of Georgia</b>
+								<br/> Majors: Mathematics and Computer Science 
+								<br/> Minors: Physics and Classical Culture </p>
+							</li>
+						</ul>
 
 
+					  	</div>
+					  	<aside class="box">
+					  	<div id="profile-calendar-container">
+						  <picture>
+						    <source type="image/avif" srcset="images/gallery/OnkenProfile.avif" />
+						    <img src="images/gallery/OnkenProfile.png" alt="OnkenProfile" class="profile-img">
+						  </picture>
 
-					<h2>About</h2>
+						  <div id="combined-calendar" role="img" aria-label="Combined GitHub contributions calendar">
+						    <img id="combined-calendar-svg" src="./contribution_chart/gh-combined-calendar.svg" alt="donken contributions calendar">
+						  </div>
+						  <p style="text-align:center;"> Recent Contributions <a href="./github.html" class="icon brands fa-github" style="font-size: 1.3em; position: relative; bottom: -1px; color: #7c8081;" aria-label="link to Github profile"><span class="label">Github</span></a> </p>
+						</div>
+						</aside>
+					</section> 
 
-
-					<p>I'm Derek Onken, a data scientist and machine learning researcher. I focus on data-intensive problems predominantly in the overlap of mathematics and computer science. Ultimately, I enjoy applying the theory to develop solutions for practical problems.</p>
-
-					</br>
-                    <p>(Such approaches include the following buzzwords: deep learning, neural networks, big data, statistical analysis, GPUs, numerical optimization, continuous normalizing flows, optimal control)</p>
-					<!--My strengths lie in mathematical approaches to data analysis which tends to encompass statistical analysis and machine learning methodologies.-->
-
-
-
-
-
-<!--     <div id="data-container">Loading data...</div>
-
-    <canvas id="contributions-canvas" width="800" height="200"></canvas>
-
-    <script type="module">
-    	import { drawContributions } from "./github-contributions-canvas/src/index.js";
-
-        // Async function to fetch and display data
-        async function fetchData() {
-            try {
-                // const response = await fetch('https://jsonplaceholder.typicode.com/posts/1');
-                const response = await fetch('https://github-contributions-api.deno.dev/donken-lilly.json');
-                const data = await response.json();
-
-                // Display the data on the webpage
-                const container = document.getElementById('data-container');
-                // container.innerHTML = `<h2>${data.totalContributions}</h2><p>${data}</p>`;
-
-	            const contributions = data.contributions;
-
-	            let outputHtml = '<ul>';
-	            contributions.forEach(group => {
-	                group.forEach(contribution => {
-	                    outputHtml += `
-	                        <li>
-	                            Date: ${contribution.date}, 
-	                            Contributions: ${contribution.contributionCount}, 
-	                            Level: ${contribution.contributionLevel}, 
-	                            Color: ${contribution.color}
-	                        </li>`;
-	                });
-	            });
-	            outputHtml += '</ul>';
-
-	            container.innerHTML = outputHtml;
-
-
-                // Prepare data for drawing contributions
-                const formattedData = {
-                    years: [
-                        {
-                            year: "2024",
-                            total: data.totalContributions,
-                            range: {
-                                start: "2024-01-01",
-                                end: "2024-12-31"
-                            }
-                        }
-                    ],
-                    contributions: contributions.flat().map(contribution => ({
-                        date: contribution.date,
-                        count: contribution.contributionCount,
-                        color: contribution.color,
-                        intensity: contribution.level || 0
-                    }))
-                };
-
-	            // Get the canvas element and draw contributions
-                const canvas = document.getElementById('contributions-canvas');
-                drawContributions(canvas, {
-                    data: formattedData,
-                    username: "donken",
-                    themeName: "standard"
-                });
-
-
-            } catch (error) {
-                console.error('Error fetching data:', error);
-                document.getElementById('data-container').innerText = 'Failed to load data';
-            }
-        }
-
-
-        // Call the async function
-        fetchData();
-    </script> -->
-
-
-<!-- 
-			<script>
-			  async function getContributions(username) {
-			  var data = await (await fetch(`https://corsanywhere.herokuapp.com/https://github-contributions-api.deno.dev/${username}.json`)).json();
-			  console.log(data.totalContributions)
-			  }
-			  getContributions("donken") // Returns 0, as Octocat has zero contributions
-
-			  // async function displayData() {
-			  //   const data = await fetchData();
-			  //   document.getElementById('data-container').textContent = JSON.stringify(data);
-			  // }
-
-			  // // Call the async function
-			  // displayData();
-			</script> -->
-
-
-
-				</div>
-			</section>
-
-		
-			<section id="one-and-a-half">
-				<div class="container">
-					<h2> &nbsp; </h2>
-					<h2>Education</h2>
-					<ul style="list-style:none;">
-						<li style="margin-bottom: 20px;">
-							<p><b>Doctor of Philosophy - Emory University</b> <br/> Computer Science & Informatics track </p>
-						</li>
-						<li style="margin-bottom: 20px;">
-							<p><b>Master of Science - Emory University</b> <br/> Computer Science </p>
-						</li>
-						<li style="margin-bottom: 20px;">
-							<p><b>Bachelor of Science - University of Georgia</b>
-							<br/> Majors: Mathematics and Computer Science 
-							<br/> Minors: Physics and Classical Culture </p>
-						</li>
-					</ul>
 
 				</div>
 			</section>
@@ -242,15 +186,6 @@
 						</li>
 					</ul>
 
-
-<!-- 					<img align="left" src="https://ghchart.rshah.org/30A14E/donken" alt="Github chart" width=60% style="max-width:950px; margin:10px">
-					<img align="left" src="https://ghchart.rshah.org/30A14E/donken-lilly" alt="Github chart" width=60% style="max-width:950px; margin:10px">
-					EBEDF0 , 9BE9A8 , 40C463 , 30A14E , 216E39
-					</br>
-					</br>
-					</br>
-					</br>
-					</br> -->
 
 						<b>
 						<h3> Publications/Preprints</h3>
@@ -384,16 +319,14 @@
 						This is my <a href="./OnkenCV.pdf" target="_blank">CV</a>.
 						<br/>Here are some <a href="./fun.html">Fun Links</a>.
 
-                    <!--
-					</br> </br> HOW-TO Guides for Emory CS Graduate Students
-					</br> <a href="https://cs.emory.edu/~donken/howto/How_To_Setup_Emory_Webpage.pdf" target="_blank">Set-up Emory Webpage</a> (November 2019 Emory SIAM Event)
-					</br>  <a href="https://cs.emory.edu/~donken/howto/CS_PhD_CandidacyAndMasters_HowTo.pdf" target="_blank">Apply for PhD Candidacy and Interim Degree</a>
-                    -->
 
 				</div>
 			</section>
-
 		</div>
+	</div>
+
+<!-- </body>
+</html> -->
 
 		<!-- Footer -->
 		<section id="footer">
@@ -408,6 +341,14 @@
 	</div>
 
 </body>
+
+<!-- move contribution chart so view starts on the right -->
+<script>
+  window.addEventListener('load', function() {
+    const container = document.getElementById('combined-calendar');
+    container.scrollLeft = container.scrollWidth; // jump to far right
+  });
+</script>
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DK3ST29H56"></script>
