add github contribution charts

--- a/github.html
+++ b/github.html
@@ -10,31 +10,32 @@
 
 	<link rel="icon" href="images/DinO.ico"> <!-- browser tab icon -->
 
-  <style>
-      body {
-          display: flex;
-          justify-content: center;
-          align-items: flex-start;
-          margin: 0;
-          padding: 0;
-          height: 100vh;
-      }
-      .container {
-          display: flex;
-          flex-direction: row;
-      }
-      .image-container {
-          display: flex;
-          flex-direction: column;
-          margin: 0 10px; /* Add horizontal margin here */
-      }
-      .image-container img {
-          display: block;
-          margin: 0;
-          padding: 0;
-          width: 95%; /* relative width */
-          height: auto; /* Maintain the aspect ratio */
-      }
+
+	<style>
+    body {
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+    }
+    .container {
+        display: flex;
+        flex-direction: column;
+    }
+    .image-container {
+        display: flex;
+        flex-direction: column;
+        margin: 0 10px; /* Add horizontal margin here */
+    }
+    .image-container img {
+        display: block;
+        margin: 0;
+        padding: 0;
+        width: 95%; /* relative width */
+        height: auto; /* Maintain the aspect ratio */
+    }
   </style>
 
 </head>
@@ -67,21 +68,30 @@
 	<div id="wrapper">
 
 		<!-- Main -->
-		<div id="main">
+		<div id="main" style="background-image: none;>
 
 				<div class="container">
-					<div class="image-container">
-							<par> <a href="https://github.com/donken" class="icon brands fa-github" style="font-size: 1.3em; position: relative; bottom: -1px;" target="_blank" aria-label="link to Github profile"><span class="label">Github</span> donken </a> (personal)</par>
-							<br/>
-	            <img src="./images/github_contributions/contributions-donken-crop-top.png" alt="Top Image">
-	            <img src="./images/github_contributions/contributions-donken-crop-bottom.png" alt="Bottom Image">
-	        </div>
-			    <div class="image-container">
-			    		<par> <a href="https://github.com/donken-lilly" class="icon brands fa-github" style="font-size: 1.3em; position: relative; bottom: -1px;" target="_blank" aria-label="link to Github profile"><span class="label">Github</span> donken-lilly </a> (work)</par>
-			    		<br/>
-			        <img src="./images/github_contributions/contributions-donken-lilly-crop-top.png" alt="Top Image">
-			        <img src="./images/github_contributions/contributions-donken-lilly-crop-bottom.png" alt="Bottom Image">
-			    </div>
+
+				<h1 style="text-align:center;"> Github Contributions </h1>
+				<p style="text-align:center;"> Combined contributions <a href="https://github.com/donken" class="icon brands fa-github" style="font-size: 1.3em; position: relative; bottom: -1px;" target="_blank" aria-label="link to Github profile"><span class="label">Github</span> donken </a> (personal) and <a href="https://github.com/donken-lilly" class="icon brands fa-github" style="font-size: 1.3em; position: relative; bottom: -1px;" target="_blank" aria-label="link to Github profile"><span class="label">Github</span> donken-lilly </a> (work)</p> 
+				<br>
+
+				<p style="font-family: Arial, Helvetica, sans-serif; font-size: 13; font-weight: bold";> &thinsp; Recent Activity </p>
+				<img src="./contribution_chart/gh-combined-calendar.svg" alt="donken and donken-lilly contributions calendar">
+				<br>
+				<br>
+				<img src="./contribution_chart/gh-combined-calendar-2024.svg" alt="donken and donken-lilly contributions calendar">
+				<br>
+				<img src="./contribution_chart/gh-combined-calendar-2023.svg" alt="donken and donken-lilly contributions calendar">
+				<br>
+				<img src="./contribution_chart/gh-combined-calendar-2022.svg" alt="donken and donken-lilly contributions calendar">
+				<br>
+				<img src="./contribution_chart/gh-combined-calendar-2021.svg" alt="donken and donken-lilly contributions calendar">
+				<br>
+				<img src="./contribution_chart/gh-combined-calendar-2020.svg" alt="donken and donken-lilly contributions calendar">
+				<br>
+				<img src="./contribution_chart/gh-combined-calendar-2019.svg" alt="donken and donken-lilly contributions calendar">
+
 		  	</div>
 
   	</div>
