adjust mobile screen view dims

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	    @media (max-width: 780px) {
 	      .box {
 	        float: none;
-	        width: 80%;
+	        max-width: 70%;
 	        margin: 0 auto 1rem; /* center horizontally */
 	      }
 	    }
