--- a/github.html
+++ b/github.html
@@ -24,17 +24,12 @@
         display: flex;
         flex-direction: column;
     }
-    .image-container {
-        display: flex;
-        flex-direction: column;
-        margin: 0 10px; /* Add horizontal margin here */
-    }
-    .image-container img {
-        display: block;
-        margin: 0;
-        padding: 0;
-        width: 95%; /* relative width */
-        height: auto; /* Maintain the aspect ratio */
+    .contrib-image {
+      display: block;
+      width: 95%;
+      max-width: 100%;
+      height: auto;
+      margin: 0.5rem 0;
     }
   </style>
 
@@ -66,38 +61,27 @@
 
 	<!-- Wrapper -->
 	<div id="wrapper">
-
 		<!-- Main -->
-		<div id="main" style="background-image: none;>
+		<div id="main" style="background-image": none;>
 
-				<div class="container">
+			<h1 style="text-align:center;"> Github Contributions </h1>
+			<p style="text-align:center;"> Combined contributions <a href="https://github.com/donken" class="icon brands fa-github" style="font-size: 1.3em; position: relative; bottom: -1px;" target="_blank" aria-label="link to Github profile"><span class="label">Github</span> donken </a> (personal) and <a href="https://github.com/donken-lilly" class="icon brands fa-github" style="font-size: 1.3em; position: relative; bottom: -1px;" target="_blank" aria-label="link to Github profile"><span class="label">Github</span> donken-lilly </a> (work)</p> 
+			<br>
 
-				<h1 style="text-align:center;"> Github Contributions </h1>
-				<p style="text-align:center;"> Combined contributions <a href="https://github.com/donken" class="icon brands fa-github" style="font-size: 1.3em; position: relative; bottom: -1px;" target="_blank" aria-label="link to Github profile"><span class="label">Github</span> donken </a> (personal) and <a href="https://github.com/donken-lilly" class="icon brands fa-github" style="font-size: 1.3em; position: relative; bottom: -1px;" target="_blank" aria-label="link to Github profile"><span class="label">Github</span> donken-lilly </a> (work)</p> 
-				<br>
 
-				<p style="font-family: Arial, Helvetica, sans-serif; font-size: 13; font-weight: bold";> &thinsp; Recent Activity </p>
-				<img src="./contribution_chart/gh-combined-calendar.svg" alt="donken and donken-lilly contributions calendar">
-				<br>
-				<br>
-				<img src="./contribution_chart/gh-combined-calendar-2024.svg" alt="donken and donken-lilly contributions calendar">
-				<br>
-				<img src="./contribution_chart/gh-combined-calendar-2023.svg" alt="donken and donken-lilly contributions calendar">
-				<br>
-				<img src="./contribution_chart/gh-combined-calendar-2022.svg" alt="donken and donken-lilly contributions calendar">
-				<br>
-				<img src="./contribution_chart/gh-combined-calendar-2021.svg" alt="donken and donken-lilly contributions calendar">
-				<br>
-				<img src="./contribution_chart/gh-combined-calendar-2020.svg" alt="donken and donken-lilly contributions calendar">
-				<br>
-				<img src="./contribution_chart/gh-combined-calendar-2019.svg" alt="donken and donken-lilly contributions calendar">
-
-		  	</div>
-
+      <div id="images-scroll" role="region" aria-label="Combined GitHub contributions calendars ">
+      	<p style="font-family: Arial, Helvetica, sans-serif; font-size: 13; font-weight: bold";> &thinsp; Recent Activity </p>
+        <img class="contrib-image" src="./contribution_chart/gh-combined-calendar.svg" alt="donken and donken-lilly contributions calendar">
+        <br>
+        <img class="contrib-image" src="./contribution_chart/gh-combined-calendar-2024.svg" alt="donken contributions calendar 2024">
+        <img class="contrib-image" src="./contribution_chart/gh-combined-calendar-2023.svg" alt="donken contributions calendar 2023">
+        <img class="contrib-image" src="./contribution_chart/gh-combined-calendar-2022.svg" alt="donken contributions calendar 2022">
+        <img class="contrib-image" src="./contribution_chart/gh-combined-calendar-2021.svg" alt="donken contributions calendar 2021">
+        <img class="contrib-image" src="./contribution_chart/gh-combined-calendar-2020.svg" alt="donken contributions calendar 2020">
+        <img class="contrib-image" src="./contribution_chart/gh-combined-calendar-2019.svg" alt="donken contributions calendar 2019">
+      </div>
   	</div>
-
 	</div>
-
 </body>
 
 <!-- Google tag (gtag.js) -->
