--- a/github.html
+++ b/github.html
@@ -20,6 +20,9 @@
         padding: 0;
         height: 100vh;
     }
+    #main {
+    	background-image: none !important;
+		}
     .container {
         display: flex;
         flex-direction: column;
@@ -62,7 +65,7 @@
 	<!-- Wrapper -->
 	<div id="wrapper">
 		<!-- Main -->
-		<div id="main" style="background-image": none;>
+		<div id="main">
 
 			<h1 style="text-align:center;"> Github Contributions </h1>
 			<p style="text-align:center;"> Combined contributions <a href="https://github.com/donken" class="icon brands fa-github" style="font-size: 1.3em; position: relative; bottom: -1px;" target="_blank" aria-label="link to Github profile"><span class="label">Github</span> donken </a> (personal) and <a href="https://github.com/donken-lilly" class="icon brands fa-github" style="font-size: 1.3em; position: relative; bottom: -1px;" target="_blank" aria-label="link to Github profile"><span class="label">Github</span> donken-lilly </a> (work)</p> 
@@ -73,6 +76,7 @@
       	<p style="font-family: Arial, Helvetica, sans-serif; font-size: 13; font-weight: bold";> &thinsp; Recent Activity </p>
         <img class="contrib-image" src="./contribution_chart/gh-combined-calendar.svg" alt="donken and donken-lilly contributions calendar">
         <br>
+        <img class="contrib-image" src="./contribution_chart/gh-combined-calendar-2025.svg" alt="donken contributions calendar 2025">
         <img class="contrib-image" src="./contribution_chart/gh-combined-calendar-2024.svg" alt="donken contributions calendar 2024">
         <img class="contrib-image" src="./contribution_chart/gh-combined-calendar-2023.svg" alt="donken contributions calendar 2023">
         <img class="contrib-image" src="./contribution_chart/gh-combined-calendar-2022.svg" alt="donken contributions calendar 2022">
